scripts/tests/errors/err_call_int.bu
// Test: calling an integer as a function
// Expected: runtime error about calling non-callable

var x = 42;
x();
